samples/_failures_safe/1761091561_a55fb7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_60d008d9.c: In function ‘main’:
./samples/SAFE/__tmp_60d008d9.c:179:12: error: missing terminating " character
  179 |     printf("Tokens
      |            ^~~~~~~
./samples/SAFE/__tmp_60d008d9.c:179:5: error: expected expression at end of input
  179 |     printf("Tokens
      |     ^~~~~~
./samples/SAFE/__tmp_60d008d9.c:179:5: error: expected declaration or statement at end of input
